Add a GraphQL object type for the various Hypixel game types

--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
     "authToken": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+    "rawGameTypeMarkdownFile": "https://raw.githubusercontent.com/HypixelDev/PublicAPI/master/Documentation/misc/GameType.md"
 }
